# photocatalysis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  data.dvc  models.dvc  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.streamlit/: config.toml  pages.toml
app/: dataset.py  predict.py  train.py  welcome.py
docs/: Makefile  conf.py  index.rst  make.bat
models/MLP/min_max_data/: model.pkl  study.pkl
models/MLP/norm_data/: model.pkl  study.pkl
models/MLP/pure_data/: study.pkl
models/MLP/sc_data/: model.pkl  study.pkl
models/catboost/min_max_data/: model.pkl  study.pkl
models/catboost/norm_data/: model.pkl  study.pkl
models/catboost/pure_data/: model.pkl  study.pkl
models/catboost/sc_data/: model.pkl  study.pkl
models/preprocessing/: le_dob.pkl  le_donor.pkl  le_method.pkl  le_prec.pkl  sc.pkl
models/process/: MinMaxScaler.pkl  Normalizer.pkl  StandardScaler.pkl  le_donor.pkl  le_prec.pkl
models/serialized/: model
notebooks/: analysis.ipynb  evaluation.ipynb  preprocessing.ipynb  train.ipynb  train.py  train_2.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
pages/: 1_🗃️_Dataset.py  2_👟_Train.py  3_🧪_Predict.py
reports/tables/: data_describe.csv  final_df.csv  grid_search_results.json
serialized_models/: le_dob.pkl  le_donor.pkl  le_method.pkl  model.pkl
src/: __init__.py  __main__.py  utils.py
src/data/: __init__.py  make_dataset.py  split_data.py
src/models/: predict_model.py
src/train/: __init__.py  objectives.py  train_models.py  tune_models.py
(+34 files in other folders)
