[tool.poetry]
name = "photocatalysis"
version = "0.1.0"
description = ""
authors = ["ShockOfWave <shockofwave90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
streamlit = "^1.29.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
openpyxl = "^3.1.2"
st-pages = "^0.4.5"

[tool.poetry.group.train.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
optuna = "^3.4.0"
catboost = "^1.2.2"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
scikit-plot = "^0.3.7"
shap = "^0.44.0"
seaborn = "^0.13.0"
optuna-dashboard = "^0.13.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
